# modtrack

./: .gitignore  Dockerfile  Dockerfile.mock-api  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.history/: Dockerfile_20241226023223  Dockerfile_20241226031302  docker-compose_20241226022236.yml  docker-compose_20241226022843.yml  docker-compose_20241226031325.yml  docker-compose_20241226031329.yml  docker-compose_20241226033542.yml  pyproject_20241226022643.toml  pyproject_20241226023527.toml  pyproject_20241226024557.toml  pyproject_20241226024833.toml  requirements_20241226023539.txt  requirements_20241226023833.txt
.history/modtrack/src/: aws_utils_20241226022051.py  aws_utils_20241226022751.py  aws_utils_20241226022805.py  local_secrets_20241226022320.py  monitor_20241226020730.py  monitor_20241226022153.py  (+3 more)
src/modtrack/: aws_utils.py  celery_app.py  config.py  db.py  local_secrets.py  main.py  monitor.py
volume/cache/: machine.json
volume/model_results/: prediction_001.txt  prediction_002.txt  prediction_003.txt  prediction_005.txt  prediction_006.txt  prediction_007.txt  prediction_008.txt  prediction_009.txt  prediction_010.txt  prediction_011.txt  prediction_012.txt  prediction_013.txt  prediction_014.txt  prediction_015.txt  prediction_016.txt  prediction_017.txt  prediction_018.txt  prediction_019.txt  prediction_020.txt  prediction_021.txt  prediction_022.txt  prediction_023.txt  prediction_024.txt  prediction_025.txt  prediction_026.txt  prediction_027.txt  prediction_028.txt  prediction_029.txt  processed_files.csv
(+20 files in other folders)
