[project]
name = "modtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.87",
    "schedule==1.2.2",
    "watchdog==6.0.0",
    "psycopg2-binary==2.9.9",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.2",
    "celery==5.3.1",
    "redis==4.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modtrack"]
